add author entity
